added Hotjar tracking code

--- a/css/styles.css
+++ b/css/styles.css
@@ -340,6 +340,10 @@ section.employment p {
     .github-corner {
       display: none;
     }
+
+    .summary-container {
+      padding-top: 0;
+    }
   }
 
   @media screen and (max-width: 992px) {}
