--- a/css/styles.css
+++ b/css/styles.css
@@ -89,18 +89,6 @@ p {
   text-align: left;
 }
 
-/* ======================
-       HEADER
-======================= */
-
-.name {
-  border-bottom: 6px solid #ff4d57;
-}
-
-/* ======================
-       ABOUT ME
-======================= */
-
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -110,6 +98,10 @@ p {
   padding: 10px;
   background-color: #fff;
 }
+
+/* ======================
+       ABOUT ME
+======================= */
 
 h2.title {
   font-size: 24px;
@@ -197,6 +189,7 @@ h2.title:after {
 /* =====================================
             EMPLOYMENT
 ======================================= */
+
 .employment-container {
   padding-top: 0;
   padding-bottom: 0;
@@ -222,135 +215,175 @@ section.employment p {
   padding: 5px 0;
 }
 
-  /* =====================================
+section.employment a {
+  text-decoration: underline;
+}
+
+
+
+/* =====================================
               PROJECTS
-  ======================================= */
-  .project {
-    max-width: 428px;
-    margin: 0 auto 10px;
+======================================= */
+
+.project {
+  max-width: 428px;
+  margin: 0 auto 10px;
+}
+
+.projects img {
+  max-width: 100%;
+}
+
+.projects h5 {
+  margin: 5px 0;
+}
+
+.project-date {
+  font-weight: 500;
+  font-size: 12px;
+  padding-bottom: 5px;
+}
+
+.projects p {
+  margin-bottom: 5px;
+}
+
+.project-button {
+  padding: 2px 0 2px 5px;
+  text-transform: uppercase;
+  background-color: #00c4f1;
+  color: #fff;
+  height: 17px;
+  font-size: 12px;
+  white-space: nowrap;
+}
+
+.project-button::after {
+  content: "";
+  position: relative;
+  left: 7px;
+  top: 17px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 19px 7px 0 0;
+  border-color: #00c4f1 transparent transparent transparent;
+}
+
+a.project-button {color: #fff; text-decoration: none; -webkit-transform: skew(-10deg, 0);}
+a.project-button:hover { color: #fff; background-color: #00add5;}
+a.project-button:hover::after {border-color: #00add5 transparent transparent transparent;}
+
+.button-nested {
+  padding: 2px 0 2px 10px;
+  text-transform: uppercase;
+  background-color: #00bce2;
+  color: #fff;
+  height: 17px;
+  font-size: 12px;
+  white-space: nowrap;
+}
+
+.button-nested::after {
+  content: "";
+  position: relative;
+  left: 7px;
+  top: 17px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 19px 7px 0 0;
+  border-color: #00bce2 transparent transparent transparent;
+}
+
+a.button-nested {color: #fff; text-decoration: none; -webkit-transform: skew(-10deg, 0);}
+a.button-nested:hover { color: #fff; background-color: #00a6cc;}
+a.button-nested:hover::after {border-color: #00a6cc transparent transparent transparent;}
+
+/* =====================================
+          FOOTER
+======================================= */
+
+.footer {
+  background-color: #e6e6e6;
+  padding: 20px 0;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.footer p {
+  color: ##848484;
+  font-size: 14px;
+}
+
+.love {
+  color: #ff4d57;
+  font-size: 12px;
+}
+
+
+/* =====================================
+            MEDIA QUERIES
+======================================= */
+
+@media screen and (max-width: 480px) {
+  .main-name {
+    font-size: 45px;
   }
 
-  .projects img {
-    max-width: 100%;
+  .summary-container h3 {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .github-corner {
+    display: none;
   }
 
-  .projects h5 {
-    margin: 5px 0;
+  .summary-container {
+    padding-top: 0;
   }
+}
 
-  .project-date {
-    font-weight: 500;
-    font-size: 12px;
-    padding-bottom: 5px;
+@media screen and (max-width: 992px) {}
+
+@media screen and (max-width: 1200px) {}
+
+
+@media print {
+
+}
+
+
+/* =====================================
+            GITHUB CORNER LINK
+======================================= */
+
+.github-corner:hover .octo-arm {
+  animation: octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave {
+  0%,
+  100% {
+    transform: rotate(0)
   }
-
-  .projects p {
-    margin-bottom: 5px;
+  20%,
+  60% {
+    transform: rotate(-25deg)
   }
-
-  .project-button {
-    padding: 2px 0 2px 5px;
-    text-transform: uppercase;
-    background-color: #00c4f1;
-    color: #fff;
-    height: 17px;
-    font-size: 12px;
-    white-space: nowrap;
+  40%,
+  80% {
+    transform: rotate(10deg)
   }
+}
 
-  .project-button::after {
-    content: "";
-    position: relative;
-    left: 7px;
-    top: 17px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 19px 7px 0 0;
-    border-color: #00c4f1 transparent transparent transparent;
+@media (max-width:500px) {
+  .github-corner:hover .octo-arm {
+    animation: none
   }
-
-  a.project-button {color: #fff; text-decoration: none; -webkit-transform: skew(-10deg, 0);}
-  a.project-button:hover { color: #fff; background-color: #00add5;}
-  a.project-button:hover::after {border-color: #00add5 transparent transparent transparent;}
-
-  .button-nested {
-    padding: 2px 0 2px 10px;
-    text-transform: uppercase;
-    background-color: #00bce2;
-    color: #fff;
-    height: 17px;
-    font-size: 12px;
-    white-space: nowrap;
+  .github-corner .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
   }
-
-  .button-nested::after {
-    content: "";
-    position: relative;
-    left: 7px;
-    top: 17px;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 19px 7px 0 0;
-    border-color: #00bce2 transparent transparent transparent;
-  }
-
-  a.button-nested {color: #fff; text-decoration: none; -webkit-transform: skew(-10deg, 0);}
-  a.button-nested:hover { color: #fff; background-color: #00a6cc;}
-  a.button-nested:hover::after {border-color: #00a6cc transparent transparent transparent;}
-
-  /* =====================================
-            FOOTER
-  ======================================= */
-
-  .footer {
-    background-color: #252525;
-    padding: 20px 0;
-    margin-top: 20px;
-    text-align: center;
-  }
-
-  .footer p {
-    color: #888;
-    font-size: 14px;
-  }
-
-  .love {
-    color: #ff4d57;
-    font-size: 12px;
-  }
-
-
-  /* =====================================
-              MEDIA QUERIES
-  ======================================= */
-
-  @media screen and (max-width: 480px) {
-    .main-name {
-      font-size: 45px;
-    }
-
-    .summary-container h3 {
-      font-size: 22px;
-    }
-  }
-
-  @media screen and (max-width: 768px) {
-    .github-corner {
-      display: none;
-    }
-
-    .summary-container {
-      padding-top: 0;
-    }
-  }
-
-  @media screen and (max-width: 992px) {}
-
-  @media screen and (max-width: 1200px) {}
-
-
-  @media print {
-
-  }
+}
