--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,9 @@ a:hover {
   padding-left: 0;
   padding-right: 0;
 }
+
 .img-container {
-  height: 300px;
+  height: 325px;
   overflow: hidden;
 }
 
@@ -309,8 +310,7 @@ a.button-nested:hover::after {border-color: #00a6cc transparent transparent tran
 ======================================= */
 
 .footer {
-  padding: 20px 0;
-  margin-top: 10px;
+  padding: 10px 0 20px;
   text-align: center;
 }
 
@@ -323,7 +323,6 @@ a.button-nested:hover::after {border-color: #00a6cc transparent transparent tran
   color: #ff4d57;
   font-size: 12px;
 }
-
 
 /* =====================================
             MEDIA QUERIES
@@ -344,6 +343,19 @@ a.button-nested:hover::after {border-color: #00a6cc transparent transparent tran
     display: none;
   }
 
+  .img-container {
+    height: 300px;
+    overflow: hidden;
+  }
+
+  .main-name {
+    text-align: center;
+  }
+
+  .summary-container h3 {
+    text-align: center;
+  }
+
   .summary-container {
     padding-top: 0;
   }
@@ -353,11 +365,9 @@ a.button-nested:hover::after {border-color: #00a6cc transparent transparent tran
 
 @media screen and (max-width: 1200px) {}
 
-
 @media print {
 
 }
-
 
 /* =====================================
             GITHUB CORNER LINK
